deploy/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-client
spec:
  selector:
    matchLabels:
      app: grpc-client
  template:
    metadata:
      labels:
        app: grpc-client
    spec:
      containers:
      - name: grpc-client
        image: pigeoncai/grpc-client:1
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - name: http
            containerPort: 8080 # 
            protocol: TCP
