deploy/envoy.yaml
---

apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  envoy.yaml: |
    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }

    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address: { address: 0.0.0.0, port_value: 8081 }
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                - name: service1_grpc
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    route: { cluster: greeter_service_grpc }
              http_filters:
              - name: envoy.router
                config: {}
      clusters:
      - name: greeter_service_grpc
        connect_timeout: 5s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        dns_lookup_family: V4_ONLY
        http2_protocol_options: { }
        hosts: [{ socket_address: { address: grpc-server, port_value: 8080 }}] # service name of grpc server 

---
# envoy deployment & server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
spec:
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - name: admin
            containerPort: 8080 # admin
            protocol: TCP
          - name: grpc
            containerPort: 8081 # grpc proxy
            protocol: TCP  
        volumeMounts:
          - name: config
            mountPath: /etc/envoy/envoy.yaml
            subPath: envoy.yaml
      volumes:
      - name: config 
        configMap:
          name:  envoy-config
          defaultMode: 0744
---

apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  selector:
    app: envoy
  ports:
  - port: 80
    targetPort: admin
    name: admin
    protocol: TCP
  - port: 81
    targetPort: grpc
    name: grpc
    protocol: TCP
